<resources>
    <string name="app_name">MinhaProva</string>
    <string name="button1">Escreva</string>
    <string name="button2">Bebida</string>
    <string name="button3">Cadastro</string>
    <string name="button4">Livros</string>
    <string name="Hello1">Escreva algo</string>
    <string name="Hello2">Realize um cadastro</string>
    <string name="texto">Escreva algo</string>
    <string name="ok">OK</string>
    <string name="bemVindo">Bem-vindo</string>
    <string name="otimo">Ótimo</string>
    <string name="proximo">Fica para a próxima</string>
    <string name="escreva_algo">Escreva algo</string>
</resources>